# facenooke

./: pyproject.toml  requirements.txt
SocialNetwork/: settings.py  urls.py  wsgi.py
facebook/: admin.py  models.py  urls.py
facebook/Views/: userview.py
facebook/migrations/: 0001_initial.py  0002_auto_20180623_2053.py  0003_auto_20180624_1119.py  0004_auto_20180624_1214.py  0005_auto_20180624_1221.py  0006_auto_20180624_2049.py  0007_message.py  0008_auto_20180707_1916.py  0009_auto_20180707_2017.py  0010_auto_20180708_1344.py  0011_auto_20180708_2143.py  0012_auto_20180710_2300.py  0013_auto_20180710_2303.py  0014_auto_20180714_2350.py
facebook/templates/: base.html  style.css
facebook/templates/fb/: Register.html  View_profile.html  add_profile.html  addpost.html  friendrequests.html  home.html  login.html  messages.html
static/: basecss.css  basescript.js  homecss.css  homescript.js
